syntax = "proto3";

option csharp_namespace = "grpcservice.Protos";

service UserOfferService {
	rpc GetUserOfferList (EmptyRequestArg) returns (UserOffers);
}

message UserOfferDetail {
	int32 id = 1;
	string productName = 2;
	string offerDescription = 3;
}

message UserOffers {
  repeated UserOfferDetail items = 1;
}

message EmptyRequestArg{

}